kubernetes/svc-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: monitoramento
spec:
  selector:
    app: grafana
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
