kubernetes/svc-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: monitoramento
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
