kubernetes/nginx-ingress.yaml
# Arquivo de configuracao do nginx ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
# Aqui definimos metadados para o nosso ingress
metadata:
  name: grafana-ingress
  namespace: monitoramento
  labels:
    app: grafana
# Aqui definimos rotas utilizadas no o ingress
# Como exemplo temos a entrada para o nosso grafana.
# Importante lembrar que ele envia para o service grafana-svc na porta 3000
spec:
  rules:
  - host: grafana.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-svc
            port:
              number: 3000
  - host: prometheus.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-svc
            port:
              number: 9090
